<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="605dp"
            android:visibility="visible"
            tools:context=".Add_New_Task"
            android:id="@+id/addconst">


            <EditText
                android:id="@+id/taskTittel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_tittel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/categoryDISCRIPTION"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/taskTittel" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/TypeOfTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/categoryDISCRIPTION">

                <com.google.android.material.chip.Chip
                    android:id="@+id/meeting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meeting"
                    app:chipBackgroundColor="#6A00897B" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/Sport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sport"
                    app:chipBackgroundColor="#5C43A047" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/Eduction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eduction"
                    app:chipBackgroundColor="#653949AB" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/Friends"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/friends"
                    app:chipBackgroundColor="#658E24AA" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/Shopping"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shopping"
                    app:chipBackgroundColor="#66C0CA33" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/Daily"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/daily"
                    app:chipBackgroundColor="#5B039BE5" />
            </com.google.android.material.chip.ChipGroup>


            <EditText
                android:id="@+id/Location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:minHeight="48dp"
                android:text="@string/location"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TypeOfTask" />

            <EditText
                android:id="@+id/Description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/more_deteails"
                android:minHeight="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Location" />

            <EditText
                android:id="@+id/Time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/time_of_task"
                android:minHeight="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/Description" />

            <EditText
                android:id="@+id/Data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/date"
                android:minHeight="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/Time" />

            <Button
                android:id="@+id/DoneButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#6F3949AB"
                android:text="@string/done"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/Data" />

            <Button
                android:id="@+id/CancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="#703949AB"
                android:text="@string/cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="@id/DoneButton"
                app:layout_constraintTop_toBottomOf="@id/Data" />

        </androidx.constraintlayout.widget.ConstraintLayout>


</layout>