<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.example.to_do_list_app.model.TaskViewModel" />
        <variable
            name="FragmentAddNewTas"
            type="com.example.to_do_list_app.Edit_Task" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Edit_Task">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="605dp"
            android:visibility="visible">


            <EditText
                android:id="@+id/taskTittelEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_tittel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/categoryDISCRIPTIONEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/taskTittelEdit" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/TypeOfTaskEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/categoryDISCRIPTIONEdit">

                <com.google.android.material.chip.Chip
                    android:id="@+id/meetingEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meeting"
                    app:chipBackgroundColor="#6A00897B" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/SportEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sport"
                    app:chipBackgroundColor="#5C43A047" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/EductionEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eduction"
                    app:chipBackgroundColor="#653949AB" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/FriendsEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/friends"
                    app:chipBackgroundColor="#658E24AA" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/ShoppingEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shopping"
                    app:chipBackgroundColor="#66C0CA33" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/DailyEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/daily"
                    app:chipBackgroundColor="#5B039BE5" />
            </com.google.android.material.chip.ChipGroup>


            <EditText
                android:id="@+id/LocationEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@+id/TypeOfTaskEdit"
                android:minHeight="48dp"
                android:text="@string/location"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/TypeOfTaskEdit" />

            <EditText
                android:id="@+id/DescriptionEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/more_deteails"
                android:minHeight="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/LocationEdit" />

            <Button
                android:id="@+id/DoneButtonEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#6F3949AB"
                android:text="@string/done"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/DescriptionEdit" />

            <Button
                android:id="@+id/CancelButtonEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="#703949AB"
                android:text="@string/cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="@id/DoneButtonEdit"
                app:layout_constraintTop_toBottomOf="@id/DescriptionEdit" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>