<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.example.to_do_list_app.model.TaskViewModel" />
        <variable
            name="fragmentdeteils"
            type="com.example.to_do_list_app.Task_Deteails" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Task_Deteails">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="390dp"
            android:layout_height="match_parent"
            android:visibility="visible">


            <TextView
                android:id="@+id/taskSummary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1.5dp"
                android:text="@string/do_my_homework"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/categorySummary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/education"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/locationSummary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:src="@drawable/location"
                android:text="@string/in_library"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/categorySummary" />


            <Button
                android:id="@+id/EditButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="#703949AB"
                android:text="@string/edit_task"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/locationSummary"
                />

<!--            android:onClick="@{() -> fragmentdeteils.goToEditPage()}"-->

            <RadioButton
                android:id="@+id/radioButtonSummary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="9dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/taskSummary"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>
</layout>